--- a/index.html
+++ b/index.html
@@ -17,29 +17,27 @@ layout: default
         {% if projects.layout == 'project' %}
         
         <a class="project-card {% if projects.importance == 'primary' %} primary-card {% endif %}" href="{{ site.baseurl }}{{ projects.url }}" data-aos="fade" {% if projects.order == 1 or projects.order == 2 %} data-aos-delay="800" data-aos-duration="800"{% else %} data-aos-delay="0" data-aos-duration="500" {% endif %}>                    
-         <div class="card-image" style="background-image: url({{ site.baseurl}}/img/index/{{ projects.card_image }}");"></div>
-         <div class="card-content">
-            <div class="card-details">
-                <h4>{{ projects.role }}</h4> 
-                <h5>
-                    {% if projects.date %}• {{ projects.date }}{% endif %}
-                </h5>
-            </div>
-            <h3>{{ projects.pretty_title }}</h3>
-            <p>{{ projects.description }}</p>
-            <div class="index-link-container">
-                <div class="single-link-container">                            
-                    <p class="project-link">View project</p>
-                    {% include right_arrow.html %}
+            <div class="card-image" style="background-image: url({{ site.baseurl}}/img/index/{{ projects.card_image }}");"></div>
+            <div class="card-content">
+                <div class="card-details">
+                    <h4>{{ projects.role }}</h4> 
+                    <h5>{% if projects.date %}• {{ projects.date }}{% endif %}</h5>
+                </div>
+                <h3>{{ projects.pretty_title }}</h3>
+                <p>{{ projects.description }}</p>
+                <div class="index-link-container">
+                    <div class="single-link-container">                            
+                        <p class="project-link">View project</p>
+                        {% include right_arrow.html %}
+                    </div>
                 </div>
             </div>
-        </div>
-    </a>
+        </a>
 
-    {% endif %}
-    {% endfor %}
+        {% endif %}
+        {% endfor %}
 
-</div>
+    </div>
 </div>
 
 
