copy updates and styling tweaks

--- a/about.html
+++ b/about.html
@@ -10,12 +10,16 @@ layout: default
 	
 	<article class="about-blurb">
 		<h3>About</h3>
-		<p>I graduated from Georgetown University in 2012 with a major in Chinese and a minor in business. Determined to justify my tuition expense and time spent studying Chinese, I applied to a China-based post as a Princeton in Asia fellow after graduation.</p>
+		<p>After graduating from Georgetown Univesity with a major in Chinese language, I served as a Princeton in Asia fellow based in China.</p>
 
-		<p>During my first year, I served as an English teacher at a university in Wuhan, China. My second post was working at <a class="inline-link" href="{{ site.baseurl}}/projects/planet_finance_china.html" target="_blank">PlaNet Finance China</a>, an international microfinance consultancy. It was during my time there that I was first exposed to the design processes, and its ability to solve problems beyond the aesthetic.</p>
-		<p>After returning from China, I continued my study of design by taking classes at General Assembly in D.C. and the School of the Art Institute in Chicago. This led me to a UX design position at <a class="inline-link" href="{{ site.baseurl}}/projects/morningstar.html" target="_blank">Morningstar</a> and to eventually heading up the design department at <a class="inline-link" href="{{ site.baseurl}}/projects/avant.html" target="_blank">Avant</a>.</p>
+		<p>I served as both an English teacher at a university in Wuhan and a project manager for <a class="inline-link" href="{{ site.baseurl}}/projects/planet_finance_china.html" target="_blank">PlaNet Finance China</a>, the China branch of an international microfinance consultancy based in Beijing. It was during my time designing financial education tools at Planet Finance that I was first exposed to the design processes, and its ability to solve problems beyond the aesthetic.</p>
+
+		<p>After returning from China, I continued my study of design, which led me first to a UX design position at <a class="inline-link" href="{{ site.baseurl}}/projects/morningstar.html" target="_blank">Morningstar</a> and to eventually heading up the design department at <a class="inline-link" href="{{ site.baseurl}}/projects/avant.html" target="_blank">Avant</a>.</p>
+
 		<p>I'm interested in bringing the human-centered design process to industries not traditionally affiliated with design. I also believe strongly in the power of <a class="inline-link" href="{{ site.baseurl}}/projects/listening_devices.html" target="_blank">conceptual design</a> to create experiences and objects that question convention.</p>
 
-		<p class="single-link-container">{% include left_arrow.html %}<a class="project-link" href="{{ site.baseurl }}/">View all projects</a></p>
+		<p>For anything design related, please feel free to contact me via <a class="inline-link" href="{{ site.baseurl}}/projects/listening_devices.html" target="_blank">LinkedIn</a>.</p>
+
+		<p class="single-link-container">{% include left_arrow.html %}<a class="project-link" href="https://www.linkedin.com/in/christophermlynarski/">View all projects</a></p>
 	</article>
 </div>
