--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 <div class="buffer project-content">
     <div class="project-header">
         <h1 class="site-title" data-aos="fade" data-aos-delay="100" data-aos-duration="800">Designer and Product Strategist in Chicago by way of China.</h1>
-        <h2 class="site-byline" data-aos="fade" data-aos-delay="400" data-aos-duration="800">Primarily working on digital products and doing some other weird stuff, too.</h2>
+        <h2 class="site-byline" data-aos="fade" data-aos-delay="400" data-aos-duration="800">Primarily working on digital products with an interest in both human-centered and speculative design.</h2>
     </div>
 
     <div class="project-grid">
