fixing link bug

--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@ layout: default
 
 		<p>I'm interested in bringing the human-centered design process to industries not traditionally affiliated with design. I also believe strongly in the power of <a class="inline-link" href="{{ site.baseurl}}/projects/listening_devices.html" target="_blank">conceptual design</a> to create experiences and objects that question convention.</p>
 
-		<p>For anything design related, please feel free to contact me via <a class="inline-link" href="{{ site.baseurl}}/projects/listening_devices.html" target="_blank">LinkedIn</a>.</p>
+		<p>For anything design related, please feel free to contact me via <a class="inline-link" href="https://www.linkedin.com/in/christophermlynarski/" target="_blank">LinkedIn</a>.</p>
 
-		<p class="single-link-container">{% include left_arrow.html %}<a class="project-link" href="https://www.linkedin.com/in/christophermlynarski/">View all projects</a></p>
+		<p class="single-link-container">{% include left_arrow.html %}<a class="project-link" href="{{ site.baseurl }}/">View all projects</a></p>
 	</article>
 </div>
