content and design tweaks before review

--- a/about.html
+++ b/about.html
@@ -10,9 +10,11 @@ layout: default
 	
 	<article class="about-blurb">
 		<h3>About</h3>
-		<p>After graduating from Georgetown Univesity with a major in Chinese language, I served as a Princeton in Asia fellow based in China.</p>
+		<p>I graduated from Georgetown Univesity with a major in Chinese language. After graduation, I served as a Princeton in Asia fellow based in China.</p>
 
-		<p>I served as both an English teacher at a university in Wuhan and a project manager for <a class="inline-link" href="{{ site.baseurl}}/projects/planet_finance_china.html" target="_blank">PlaNet Finance China</a>, the China branch of an international microfinance consultancy based in Beijing. It was during my time designing financial education tools at Planet Finance that I was first exposed to the design processes, and its ability to solve problems beyond the aesthetic.</p>
+		<p>While in China, I served as both an English teacher at a university in Wuhan and a project manager for <a class="inline-link" href="{{ site.baseurl}}/projects/planet_finance_china.html" target="_blank">PlaNet Finance China</a>, the China branch of an international microfinance consultancy based in Beijing.</p>
+
+		<p>It was during my time designing financial education tools at Planet Finance that I was first exposed to the design processes, and its ability to solve problems beyond the aesthetic.</p>
 
 		<p>After returning from China, I continued my study of design, which led me first to a UX design position at <a class="inline-link" href="{{ site.baseurl}}/projects/morningstar.html" target="_blank">Morningstar</a> and to eventually heading up the design department at <a class="inline-link" href="{{ site.baseurl}}/projects/avant.html" target="_blank">Avant</a>.</p>
 
