bug fixes and content tweaks

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@ layout: default
 
 		<p>It was during my time designing financial education tools at Planet Finance that I was first exposed to the design processes, and its ability to solve problems beyond the aesthetic.</p>
 
-		<p>After returning from China, I continued my study of design, which led me first to a UX design position at <a class="inline-link" href="{{ site.baseurl}}/projects/morningstar.html" target="_blank">Morningstar</a> and to eventually heading up the design department at <a class="inline-link" href="{{ site.baseurl}}/projects/avant.html" target="_blank">Avant</a>.</p>
+		<p>After returning from China, I continued my study of design, which led me first to a UX design position at <a class="inline-link" href="{{ site.baseurl}}/projects/Morningstar.html" target="_blank">Morningstar</a> and to eventually heading up the design department at <a class="inline-link" href="{{ site.baseurl}}/projects/Avant.html" target="_blank">Avant</a>.</p>
 
 		<p>I'm interested in bringing the human-centered design process to industries not traditionally affiliated with design. I also believe strongly in the power of <a class="inline-link" href="{{ site.baseurl}}/projects/listening_devices.html" target="_blank">conceptual design</a> to create experiences and objects that question convention.</p>
 
