--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ layout: default
 ---
 <div class="buffer about-page-container">
 	<section class="about-image-container">
-		<img src="{{ site.baseurl}}/img/about.jpg">
+		<img src="{{ site.baseurl}}/img/about.png">
 	</section>
 	
 	<article class="about-blurb">
