changing project order and cleanup

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ layout: default
 
 		<p>After returning from China, I continued my study of design, which led me first to a UX design position at <a class="inline-link" href="{{ site.baseurl}}/projects/Morningstar.html" target="_blank">Morningstar</a> and to eventually heading up the design department at <a class="inline-link" href="{{ site.baseurl}}/projects/Avant.html" target="_blank">Avant</a>.</p>
 
-		<p>I'm interested in bringing the human-centered design process to industries not traditionally affiliated with design. I also believe strongly in the power of <a class="inline-link" href="{{ site.baseurl}}/projects/listening_devices.html" target="_blank">conceptual design</a> to create experiences and objects that question convention.</p>
+		<p>I'm interested in bringing the human-centered design process to industries not traditionally affiliated with design and using data to inform and validate design decisions.</p>
 
 		<p>For anything design related, please feel free to contact me via <a class="inline-link" href="https://www.linkedin.com/in/christophermlynarski/" target="_blank">LinkedIn</a>.</p>
 
