--- a/about.html
+++ b/about.html
@@ -22,6 +22,8 @@ layout: default
 
 		<p>For anything design related, please feel free to contact me via <a class="inline-link" href="https://www.linkedin.com/in/christophermlynarski/" target="_blank">LinkedIn</a>.</p>
 
+		<p>我会讲中文并有在中文办公室环境中工作的经验。</p>
+
 		<p class="single-link-container">{% include left_arrow.html %}<a class="project-link" href="{{ site.baseurl }}/">View all projects</a></p>
 	</article>
 </div>
