--- a/about.html
+++ b/about.html
@@ -10,15 +10,15 @@ layout: default
 	
 	<article class="about-blurb">
 		<h3>About</h3>
-		<p>I graduated from Georgetown Univesity with a major in Chinese language. After graduation, I served as a Princeton in Asia fellow based in China.</p>
+		<p>I graduated from Georgetown University with a major in Chinese language. After graduation, I served as a Princeton in Asia fellow based in China.</p>
 
 		<p>While in China, I served as both an English teacher at a university in Wuhan and a project manager for <a class="inline-link" href="{{ site.baseurl}}/projects/planet_finance_china.html" target="_blank">PlaNet Finance China</a>, the China branch of an international microfinance consultancy based in Beijing.</p>
 
-		<p>It was during my time designing financial education tools at Planet Finance that I was first exposed to the design processes, and its ability to solve problems beyond the aesthetic.</p>
+		<p>It was during my time designing financial education tools at PlaNet Finance that I was first exposed to the design process, and its ability to solve problems beyond the aesthetic.</p>
 
 		<p>After returning from China, I continued my study of design, which led me first to a UX design position at <a class="inline-link" href="{{ site.baseurl}}/projects/Morningstar.html" target="_blank">Morningstar</a> and to eventually heading up the design department at <a class="inline-link" href="{{ site.baseurl}}/projects/Avant.html" target="_blank">Avant</a>.</p>
 
-		<p>I'm interested in bringing the human-centered design process to industries not traditionally affiliated with design and using data to inform and validate design decisions.</p>
+		<p>I'm interested in bringing the human-centered design process to industries not traditionally affiliated with design, and using data to inform and validate design decisions.</p>
 
 		<p>For anything design related, please feel free to contact me via <a class="inline-link" href="https://www.linkedin.com/in/christophermlynarski/" target="_blank">LinkedIn</a>.</p>
 
