--- a/about.html
+++ b/about.html
@@ -10,19 +10,19 @@ layout: default
 	
 	<article class="about-blurb">
 		<h3>About</h3>
-		<p>I graduated from Georgetown University with a major in Chinese language. After graduation, I served as a Princeton in Asia fellow based in China.</p>
+		<p>Originally from Chicago, I attended college at Georgetown University as a Chinese language major. Shortly after graduation, I moved to China to serve as a Princeton in Asia fellow.</p>
 
-		<p>While in China, I served as both an English teacher at a university in Wuhan and a project manager for <a class="inline-link" href="{{ site.baseurl}}/projects/planet_finance_china.html" target="_blank">PlaNet Finance China</a>, the China branch of an international microfinance consultancy based in Beijing.</p>
+		<p>While in China, I first served as an English teacher at a university in Wuhan and later as a project manager at <a class="inline-link" href="{{ site.baseurl}}/projects/planet_finance_china.html" target="_blank">PlaNet Finance China</a>, the China branch of an international microfinance consultancy.</p>
 
 		<p>It was during my time designing financial education tools at PlaNet Finance that I was first exposed to the design process, and its ability to solve problems beyond the aesthetic.</p>
 
-		<p>After returning from China, I continued my study of design, which led me first to a UX design position at <a class="inline-link" href="{{ site.baseurl}}/projects/Morningstar.html" target="_blank">Morningstar</a> and to eventually heading up the design department at <a class="inline-link" href="{{ site.baseurl}}/projects/Avant.html" target="_blank">Avant</a>.</p>
+		<p>After returning from China, I continued my study of design, which led me first to a UX design position at <a class="inline-link" href="{{ site.baseurl}}/projects/Morningstar.html" target="_blank">Morningstar</a> and to eventually heading up the design team at the Chicago-based fintech startup, <a class="inline-link" href="{{ site.baseurl}}/projects/Avant.html" target="_blank">Avant</a>.</p>
 
-		<p>I'm interested in bringing the human-centered design process to industries not traditionally affiliated with design, and using data to inform and validate design decisions.</p>
+		<p>I'm interested in bringing the human-centered design process to industries not traditionally affiliated with design, and using data to inform and validate design decisions. I'm experienced with HTML and CSS, and familiar with Javascript and SQL.</p>
 
 		<p>For anything design related, please feel free to contact me via <a class="inline-link" href="https://www.linkedin.com/in/christophermlynarski/" target="_blank">LinkedIn</a>.</p>
 
-		<p>我会讲中文，并有在中国公司的全中文环境中工作的经验。</p>
+		<p>我会讲中文，并有在中国公司的全中文环境中工作的经验。如果您正寻找能以中文作为工作语言的设计人才，您可以通过<a class="inline-link" href="https://www.linkedin.com/in/christophermlynarski/" target="_blank">LinkedIn</a>与我联系。</p>
 
 		<p class="single-link-container">{% include left_arrow.html %}<a class="project-link" href="{{ site.baseurl }}/">View all projects</a></p>
 	</article>
